--- a/Source/Moq4.Analyzers/Moq4.Analyzers.csproj
+++ b/Source/Moq4.Analyzers/Moq4.Analyzers.csproj
@@ -35,7 +35,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CodeFixProvider.cs" />
-    <Compile Include="DiagnosticAnalyzer.cs" />
+    <Compile Include="CallbackSignatureShouldMatchMockedMethod.cs" />
+    <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
