--- a/Source/Moq4.Analyzers.Test/Moq4.Analyzers.Test.csproj
+++ b/Source/Moq4.Analyzers.Test/Moq4.Analyzers.Test.csproj
@@ -119,9 +119,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\CallbackWithBadParameters.cs" />
-    <Compile Include="Data\CallbackWithNoParameters.cs" />
-    <Compile Include="Data\CallbackWithGoodParameters.cs" />
+    <Compile Include="Data\CallbackSignatureShouldMatchMockedMethodTest\CallbackWithBadParameters.cs" />
+    <Compile Include="Data\CallbackSignatureShouldMatchMockedMethodTest\CallbackWithNoParameters.cs" />
+    <Compile Include="Data\CallbackSignatureShouldMatchMockedMethodTest\CallbackWithGoodParameters.cs" />
     <Compile Include="Verifiers\CodeFixVerifier.cs" />
     <Compile Include="Verifiers\DiagnosticVerifier.cs" />
     <Compile Include="Helpers\CodeFixVerifier.Helper.cs" />
