--- a/Source/Moq4.Analyzers/Moq4.Analyzers.csproj
+++ b/Source/Moq4.Analyzers/Moq4.Analyzers.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="CodeFixProvider.cs" />
+    <Compile Include="FixCallbackSignatureCodeFixProvider.cs" />
     <Compile Include="CallbackSignatureShouldMatchMockedMethod.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
