--- a/Source/Moq.Analyzers.Vsix/Moq.Analyzers.Vsix.csproj
+++ b/Source/Moq.Analyzers.Vsix/Moq.Analyzers.Vsix.csproj
@@ -34,8 +34,8 @@
     <ProjectGuid>{6C178A5C-B77B-484D-AD33-38E24B76FF35}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Moq4.Analyzers.Vsix</RootNamespace>
-    <AssemblyName>Moq4.Analyzers.Vsix</AssemblyName>
+    <RootNamespace>Moq.Analyzers.Vsix</RootNamespace>
+    <AssemblyName>Moq.Analyzers.Vsix</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
     <IncludeAssemblyInVSIXContainer>false</IncludeAssemblyInVSIXContainer>
@@ -73,9 +73,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Moq4.Analyzers\Moq4.Analyzers.csproj">
+    <ProjectReference Include="..\Moq.Analyzers\Moq.Analyzers.csproj">
       <Project>{41ECC571-F586-460A-9BED-23528C8210C4}</Project>
-      <Name>Moq4.Analyzers</Name>
+      <Name>Moq.Analyzers</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
