--- a/Source/Moq.Analyzers/Diagnostic.nuspec
+++ b/Source/Moq.Analyzers/Diagnostic.nuspec
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>Moq4.Analyzers</id>
+    <id>Moq.Analyzers</id>
     <version>1.0.0.0</version>
-    <title>Moq4.Analyzers</title>
+    <title>Moq.Analyzers</title>
     <authors>Andrey</authors>
     <owners>Andrey</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
     <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Moq4.Analyzers</description>
+    <description>Moq.Analyzers</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Copyright</copyright>
-    <tags>Moq4.Analyzers, analyzers</tags>
+    <tags>Moq.Analyzers, analyzers</tags>
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System" targetFramework="" />
     </frameworkAssemblies>
