--- a/Source/Moq.Analyzers/Moq.Analyzers.csproj
+++ b/Source/Moq.Analyzers/Moq.Analyzers.csproj
@@ -10,8 +10,8 @@
     <ProjectGuid>{41ECC571-F586-460A-9BED-23528C8210C4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Moq4.Analyzers</RootNamespace>
-    <AssemblyName>Moq4.Analyzers</AssemblyName>
+    <RootNamespace>Moq.Analyzers</RootNamespace>
+    <AssemblyName>Moq.Analyzers</AssemblyName>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkProfile>Profile7</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
