--- a/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
+++ b/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
@@ -119,10 +119,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\CallbackSignatureShouldMatchMockedMethodTest\CallbackWithBadParameters.cs">
+    <Compile Include="CallbackSignatureCodeFixTests.cs" />
+    <Compile Include="CallbackSignatureAnalyzerTests.cs" />
+    <Compile Include="Data\CallbackSignatures\CallbackWithBadParameters.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
-    <Compile Include="Data\CallbackSignatureShouldMatchMockedMethodTest\CallbackWithGoodParameters.cs">
+    <Compile Include="Data\CallbackSignatures\CallbackWithGoodParameters.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Verifiers\CodeFixVerifier.cs" />
@@ -130,7 +132,6 @@
     <Compile Include="Helpers\CodeFixVerifier.Helper.cs" />
     <Compile Include="Helpers\DiagnosticResult.cs" />
     <Compile Include="Helpers\DiagnosticVerifier.Helper.cs" />
-    <Compile Include="CallbackSignatureShouldMatchMockedMethodTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
