--- a/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
+++ b/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
@@ -119,22 +119,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\MockInterfaceWithParameters.cs">
+    <None Include="Data\MockInterfaceWithParameters.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
+    </None>
     <Compile Include="ShouldNotAllowParametersForMockedInterfaceAnalyzerTests.cs" />
     <Compile Include="ShouldNotMockSealedClassesAnalyzerTests.cs" />
     <Compile Include="CallbackSignatureCodeFixTests.cs" />
     <Compile Include="CallbackSignatureAnalyzerTests.cs" />
-    <Compile Include="Data\CallbackSignatures\CallbackWithBadParameters.cs">
+    <None Include="Data\CallbackSignatures\CallbackWithBadParameters.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Data\MockSealedClass.cs">
+    </None>
+    <None Include="Data\MockSealedClass.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Data\CallbackSignatures\CallbackWithGoodParameters.cs">
+    </None>
+    <None Include="Data\CallbackSignatures\CallbackWithGoodParameters.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
+    </None>
     <Compile Include="Verifiers\CodeFixVerifier.cs" />
     <Compile Include="Verifiers\DiagnosticVerifier.cs" />
     <Compile Include="Helpers\CodeFixVerifier.Helper.cs" />
