Refactored analyzers for mocks creation, fixed couple of defects

--- a/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
+++ b/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
@@ -122,6 +122,9 @@
     <None Include="Data\MockInterfaceWithParameters.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Data\MockInterfaceWithParametersCustomMockFile.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Compile Include="ShouldNotAllowParametersForMockedInterfaceAnalyzerTests.cs" />
     <Compile Include="ShouldNotMockSealedClassesAnalyzerTests.cs" />
     <Compile Include="CallbackSignatureCodeFixTests.cs" />
