--- a/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
+++ b/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
@@ -125,8 +125,8 @@
     <None Include="Data\MockInterfaceWithParametersCustomMockFile.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Compile Include="ShouldNotAllowParametersForMockedInterfaceAnalyzerTests.cs" />
-    <Compile Include="ShouldNotMockSealedClassesAnalyzerTests.cs" />
+    <Compile Include="NoParametersForMockedInterfacesAnalyzerTests.cs" />
+    <Compile Include="NoMocksForSealedClassesAnalyzerTests.cs" />
     <Compile Include="CallbackSignatureCodeFixTests.cs" />
     <Compile Include="CallbackSignatureAnalyzerTests.cs" />
     <None Include="Data\CallbackSignatures\CallbackWithBadParameters.cs">
@@ -138,8 +138,8 @@
     <None Include="Data\CallbackSignatures\CallbackWithGoodParameters.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Compile Include="Verifiers\CodeFixVerifier.cs" />
-    <Compile Include="Verifiers\DiagnosticVerifier.cs" />
+    <Compile Include="Helpers\CodeFixVerifier.cs" />
+    <Compile Include="Helpers\DiagnosticVerifier.cs" />
     <Compile Include="Helpers\CodeFixVerifier.Helper.cs" />
     <Compile Include="Helpers\DiagnosticResult.cs" />
     <Compile Include="Helpers\DiagnosticVerifier.Helper.cs" />
