--- a/Source/Moq.Analyzers/Moq.Analyzers.csproj
+++ b/Source/Moq.Analyzers/Moq.Analyzers.csproj
@@ -37,6 +37,7 @@
     <Compile Include="CallbackSignatureAnalyzer.cs" />
     <Compile Include="CallbackSignatureCodeFix.cs" />
     <Compile Include="Helpers.cs" />
+    <Compile Include="MatchingConstructorParametersAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
