--- a/Source/Moq.Analyzers.Test/packages.config
+++ b/Source/Moq.Analyzers.Test/packages.config
@@ -11,6 +11,8 @@
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="net46" />
   <package id="Moq" version="4.7.145" targetFramework="net46" />
+  <package id="Roslynator.Analyzers" version="1.5.0" targetFramework="net46" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net46" developmentDependency="true" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net46" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net46" />
   <package id="xunit" version="2.3.1" targetFramework="net46" />
