--- a/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
+++ b/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
@@ -168,9 +168,10 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\..\packages\Roslynator.Analyzers.1.5.0\analyzers\dotnet\cs\Roslynator.Common.dll" />
-    <Analyzer Include="..\..\packages\Roslynator.Analyzers.1.5.0\analyzers\dotnet\cs\Roslynator.Core.dll" />
-    <Analyzer Include="..\..\packages\Roslynator.Analyzers.1.5.0\analyzers\dotnet\cs\Roslynator.CSharp.Analyzers.dll" />
+    <Analyzer Include="..\..\packages\Roslynator.Analyzers.1.7.0\analyzers\dotnet\cs\Roslynator.Common.dll" />
+    <Analyzer Include="..\..\packages\Roslynator.Analyzers.1.7.0\analyzers\dotnet\cs\Roslynator.Core.dll" />
+    <Analyzer Include="..\..\packages\Roslynator.Analyzers.1.7.0\analyzers\dotnet\cs\Roslynator.CSharp.Analyzers.dll" />
+    <Analyzer Include="..\..\packages\Roslynator.Analyzers.1.7.0\analyzers\dotnet\cs\Roslynator.Workspaces.dll" />
     <Analyzer Include="..\..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
