--- a/Source/Moq.Analyzers.Test/packages.config
+++ b/Source/Moq.Analyzers.Test/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ApprovalTests" version="3.0.13" targetFramework="net46" />
-  <package id="ApprovalUtilities" version="3.0.13" targetFramework="net46" />
+  <package id="AlphaFS" version="2.1.3" targetFramework="net46" />
+  <package id="ApprovalTests" version="3.0.14" targetFramework="net46" />
+  <package id="ApprovalUtilities" version="3.0.14" targetFramework="net46" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.1" targetFramework="net46" />
