--- a/Source/Moq.Analyzers.Test/packages.config
+++ b/Source/Moq.Analyzers.Test/packages.config
@@ -11,11 +11,13 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="net46" />
-  <package id="Moq" version="4.7.145" targetFramework="net46" />
+  <package id="Moq" version="4.8.2" targetFramework="net46" />
   <package id="Roslynator.Analyzers" version="1.7.0" targetFramework="net46" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net46" developmentDependency="true" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net46" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
   <package id="xunit" version="2.3.1" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net46" />
   <package id="xunit.analyzers" version="0.8.0" targetFramework="net46" />
