--- a/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
+++ b/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
@@ -56,6 +56,9 @@
     <Compile Update="Data\NoSealedClassMocks.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Update="Data\AsAcceptOnlyInterface.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Update="Data\SetupOnlyForOverridableMembers.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
