--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch: # Allow running the workflow manually from the GitHub UI
   push:
     branches:
-      - main
+      - master
   workflow_call: # Allow to be called from the release workflow
 
 permissions:
@@ -39,15 +39,16 @@ jobs:
     - name: Test
       run: dotnet test --no-build --configuration Release
 
-    - name: Publish Test Report
-      uses: dorny/test-reporter@v1
-      if: success() || failure()
-      with:
-        name: .NET Test Report (${{ matrix.os }})
-        path: "artifacts/TestResults/**/*.trx"
-        reporter: dotnet-trx
-        fail-on-error: true
-        fail-on-empty: true
+    # TODO: Create a TRX report and upload as an artifact. Tracked by #22. 
+    # - name: Publish Test Report
+    #   uses: dorny/test-reporter@v1
+    #   if: success() || failure()
+    #   with:
+    #     name: .NET Test Report (${{ matrix.os }})
+    #     path: "artifacts/TestResults/**/*.trx"
+    #     reporter: dotnet-trx
+    #     fail-on-error: true
+    #     fail-on-empty: true
 
     - name: Upload binlogs
       uses: actions/upload-artifact@v4
