Enable TRX reports in build pipeline

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,4 +4,5 @@
   </PropertyGroup>
 
   <Import Project="build/targets/artifacts/Artifacts.props" />
+  <Import Project="build/targets/tests/Tests.props" />
 </Project>
