Enable ImplicitUsings, C# 12, and Nullable

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,4 +1,5 @@
 <Project>
   <Import Project="build/targets/artifacts/Artifacts.targets" />
+  <Import Project="build/targets/compiler/Compiler.targets" />
   <Import Project="build/targets/tests/Tests.targets" />
 </Project>
