--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,5 +4,6 @@
   </PropertyGroup>
 
   <Import Project="build/targets/artifacts/Artifacts.props" />
+  <Import Project="build/targets/compiler/Compiler.props" />
   <Import Project="build/targets/tests/Tests.props" />
 </Project>
