Add nbgv tool to automate versioning

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,5 +1,6 @@
 <Project>
   <Import Project="build/targets/artifacts/Artifacts.targets" />
   <Import Project="build/targets/compiler/Compiler.targets" />
+  <Import Project="build/targets/versioning/Versioning.targets" />
   <Import Project="build/targets/tests/Tests.targets" />
 </Project>
