Use file-scoped namespaces

--- a/.editorconfig
+++ b/.editorconfig
@@ -134,6 +134,9 @@ csharp_style_unused_value_expression_statement_preference = discard_variable:sil
 # 'using' directive preferences
 csharp_using_directive_placement = outside_namespace:warning
 
+# namespace preferences
+csharp_style_namespace_declarations = file_scoped:warning
+
 #### C# Formatting Rules ####
 
 # New line preferences
