Upload .nupkg as build artifact

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,14 +81,13 @@ jobs:
         path: ./artifacts/logs
         if-no-files-found: error
 
-    # TODO: Wire up building packages. Tracked by #13.
-    # - name: Upload packages
-    #   uses: actions/upload-artifact@v4
-    #   with:
-    #     name: packages-${{ matrix.os }}
-    #     path: |
-    #       ./artifacts/package
-    #     if-no-files-found: error
+    - name: Upload packages
+      uses: actions/upload-artifact@v4
+      with:
+        name: packages-${{ matrix.os }}
+        path: |
+          ./artifacts/package
+        if-no-files-found: error
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
