--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,6 +1,7 @@
 <Project>
   <Import Project="build/targets/artifacts/Artifacts.targets" />
   <Import Project="build/targets/compiler/Compiler.targets" />
+  <Import Project="build/targets/reproducible/Reproducible.targets" />
   <Import Project="build/targets/versioning/Versioning.targets" />
   <Import Project="build/targets/tests/Tests.targets" />
 </Project>
