--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,6 +3,9 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
+
+  <Import Project="build/targets/reproducible/Packages.props" />
+
   <ItemGroup>
     <PackageVersion Include="GetPackFromProject" Version="1.0.6" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.3" />
@@ -12,7 +15,7 @@
     <PackageVersion Include="Nerdbank.GitVersioning" Version="3.6.133" />
     <PackageVersion Include="Roslynator.Analyzers" Version="2.1.0" />
     <PackageVersion Include="StyleCop.Analyzers" Version="1.1.118" />
-    <PackageVersion Include="Verify.Nupkg" Version="1.1.1" />
+    <PackageVersion Include="Verify.Nupkg" Version="1.1.5" />
     <PackageVersion Include="Verify.Xunit" Version="24.2.0" />
     <PackageVersion Include="xunit" Version="2.8.1" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.1" />
