--- a/Source/Moq.Analyzers.Test/PackageTests.Baseline#manifest.verified.nuspec
+++ b/Source/Moq.Analyzers.Test/PackageTests.Baseline#manifest.verified.nuspec
@@ -12,7 +12,7 @@
     <releaseNotes>Upgraded to support Visual Studio 2019</releaseNotes>
     <copyright>2015-2019 Andrey Lipatkin</copyright>
     <tags>moq, mock, test, analyzers</tags>
-    <repository type="git" commit="****************************************" />
+    <repository type="git" url="https://github.com/********/moq.analyzers.git" commit="****************************************" />
     <dependencies>
       <group targetFramework=".NETStandard2.0" />
     </dependencies>
