Combine AbstractClass.Good.cs and AbstractClass.Bad.cs

--- a/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
+++ b/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
@@ -42,10 +42,7 @@
     <ProjectReference Include="..\Moq.Analyzers\Moq.Analyzers.csproj" AddPackageAsOutput="true" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Data\AbstractClass.Bad.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\AbstractClass.Good.cs">
+    <Compile Update="Data\AbstractClass.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Update="Data\CallbackSignatureShouldMatchMockedMethod.cs">
