Refactor tests to simplify and inline test cases (#57)
* Remove #pragmas from test data

* Combine AbstractClass.Good.cs and AbstractClass.Bad.cs

* Split AbstractClass tests up per-test case

* Remove dead code from AbstractClass tests

* Inline AbstractClass test data into test

* Move duplicated AbstractClass test

* Split AsAcceptOnlyInterface tests up per-test case

* Remove dead code from AsAcceptOnlyInterface tests

* Inline AsAcceptOnlyInterface test data into tests

* Split CallbackSignatureShouldMatchMockedMethod tests up per-test case

* Inline CallbackSignatureShouldMatchMockedMethod test data into tests

* Simplify names for ConstructorArgumentsShouldMatch tests

* Split ConstructorArgumentsShouldMatch tests up per-test case

* Inline ConstructorArgumentsShouldMatch test data into tests

* Simplify names for NoConstructorArgumentsForInterfaceMock tests

* Split NoConstructorArgumentsForInterfaceMock_1

* Inline NoConstructorAgrumentsForInterfaceMock_1

* Add TODOs for questionable test practices in AbstractClass tests

* Split NoConstructorArgumentsForInterfaceMock_2

* Inline NoConstructorAgrumentsForInterfaceMock_2

* Split NoMethodsInPropertySetup

* Inline NoMethodsInPropertySetup

* Simplify names for NoSealedClassMocks

* Split NoSealedClassMocks

* Inline NoSealedClassMocks

* Simplify SetupOnForOverridableMemebers

* Split SetupOnlyForOverridableMembers tests

* Simplify SetupOnForOverridableMemebers tests

* Inline SetupOnlyforOverridableMemebers

* Simplify SetupShouldNotIncludeAsyncResult

* Split SetupShouldNotIncludeAsyncResult tests

* Inline SetupShouldNotIncludeAsyncResult tests

--- a/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
+++ b/Source/Moq.Analyzers.Test/Moq.Analyzers.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -40,41 +40,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Moq.Analyzers\Moq.Analyzers.csproj" AddPackageAsOutput="true" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Update="Data\AbstractClass.Bad.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\AbstractClass.Good.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\CallbackSignatureShouldMatchMockedMethod.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\ConstructorArgumentsShouldMatch.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\NoConstructorArgumentsForInterfaceMock_1.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\NoConstructorArgumentsForInterfaceMock_2.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\NoMethodsInPropertySetup.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\NoSealedClassMocks.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\AsAcceptOnlyInterface.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\SetupOnlyForOverridableMembers.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="Data\SetupShouldNotIncludeAsyncResult.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
   </ItemGroup>
 
 </Project>
